First live iteration of website

--- a/impacts.html
+++ b/impacts.html
@@ -36,11 +36,12 @@
 					<nav id="nav">
 						 <ul>
 							<li><a href="index.html">Home</a></li>
-							<li  class="current"><a href="impacts.html">Impacts</a></li>
+							<li class="current"><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
-							<li><a href="noise.html">Noise in SF</a></li>
-							<li><a href="report.html">Report</a></li>
-							<li><a href="resources.html">Resources</a></li>
+							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="measurement.html">Measuring Noise</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
+							<li><a href="resources.html">Additional Resources</a></li>
 						</ul>
 					</nav>
 
@@ -56,26 +57,90 @@
 							<article>
 								<header>
 									<h2>Noise Impacts</h2>
-									<p>Noise noise noise...</p>
+									<p>Noise annoyance is defined as “a feeling of resentment, displeasure, discomfort, dissatisfaction, or offense when noise interferes with someone's thoughts, feelings, or actual activities.” Chronic exposure to elevated levels of community noise creates significant health risks.  These health impacts of noise depend on the intensity of noise, on the duration of exposure, and the context of exposure.</p>
 								</header>
 
-								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+						<div class="row">
+							<div class="box post">
+								<div class="image impacts-image left"><img src="images/biological.png" alt="" /></div>
+								<div class="inner impacts-inner">
+									<h3>Biological</h3>
+									<p>Noise triggers automatic chemical mechanisms for arousal and alertness and may aggravate conditions relating to chronic stress, including high blood pressure. Exposure to higher levels of traffic noise is linked to higher risk for myocardial infarction and exposure to air traffic noise, such as from jets and large aircrafts, is associated with hypertension.</p>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="box post">
+								<div class="image impacts-image left"><img src="images/behavioral.png" alt="" /></div>
+								<div class="inner impacts-inner">
+									<h3>Behavioral</h3>
+									<p>Despite how accustomed people may be to various noise levels, even moderate levels of noise can obstruct normal activities such as ordinary conversations, daily activities, resting, sleeping, or just concentrating on a task.</p>
+								</div>
+							</div>
+						</div>
 
-								<p>Chronic exposure to elevated levels of community noise creates significant health risks.  These health impacts of noise depend on the intensity of noise, on the duration of exposure, and the context of exposure.</p>
+						<div class="row">
+							<div class="box post">
+								<div class="image impacts-image left"><img src="images/sleep.png" alt="" /></div>
+								<div class="inner impacts-inner">
+									<h3>Sleep</h3>
+									<p>Sleep does more than just keep us awake. Physiologically, exposure to noise causes reactions that disturb natural sleep patterns and shift the sleeper from a deep to light stage. Chronic noise exposure overnight while a person sleeps may cause them to wake up in the morning still feeling tired. Statistics show that the average nighttime noise level of 65 dB will self-reportedly disturb about 15% of the population and a single event of 80 dB noise level will awaken about a third of the population.</p>
+								</div>
+							</div>
+						</div>
 
-								<p>Noise annoyance is defined as “a feeling of resentment, displeasure, discomfort, dissatisfaction, or offense when noise interferes with someone's thoughts, feelings, or actual activities”</p>
+						<div class="row">
+							<div class="box post">
+								<div class="image impacts-image left"><img src="images/cognitive.png" alt="" /></div>
+								<div class="inner impacts-inner">
+									<h3>Cognitive</h3>
+									<p>Medium levels of traffic noise impairs cognitive functioning in children, including  attention, concentration, sound discrimination, memory, and reading ability. Studies have shown that children exposed to mediocre levels of traffic noise are more likely to develop deficits in reading ability and have lower school performance.</p>
+								</div>
+							</div>
+						</div>
 
-								<p>Moderate levels of noise can limit or interfere with the ability to conduct daily tasks and activity — to have an ordinary conversation, enjoy a leisure activities, rest, sleep, concentrate or get tasks done.</p>
-
-								<p>Noise from moderate levels of road traffic impairs cognitive functioning in children, including attention, concentration, sound discrimination, memory, and reading ability.  Some children exposed to moderate levels of road traffic noise develop deficits in reading ability and suffer lower school in school performance.</p>
-
-								<p>Noise interferes with sleep. Noise can make it difficult to fall asleep, and abrupt noises can cause awakenings, which the sleeper may not sense or recall.  Even at levels below which awakening may occur, noise produces measurable physiological reactions, such as increase in heart rate and body movements and can cause disturbances of natural sleep patterns by causing shifts from deep to lighter stages. People affected by noise may get up "tired" or "not rested" in the morning.</p> 
-								
-								<p>Noise is a biological stressor; it triggers autonomic chemical mechanisms for arousal and alertness. Consequentially, noise may cause or aggravate conditions related to chronic stress.</p>
-
-								<p>While evidence is not yet conclusive, exposure to higher levels road traffic noise is associated with higher a risk for myocardial infarction and exposure air traffic noise is  associated with hypertension.</p>
-
-							</article>
+						<div class="row">
+							<h3>What level of noise is safe?</h3>
+							<p class="impact-subtitle">Different agencies have different numbers on what continuous noise levels are safe. Below is a table of health-based noise thresholds adopted by authoratative agencies.</p>
+								<table class="noise-table impact-table">
+								  <thead>
+								    <td><h6>Agency</h6></td>
+								    <td><h6>Measure of Average Sound Level</h6></td>
+								    <td><h6>Health Protective Threshold Value in dbA (A-weighted decibels)</h6></td>
+								  </thead>
+								  <tbody>
+									  <tr>
+										<td>USEPA</td>
+										<td>Indoors Day-Night</td>
+										<td>45</td>
+									  </tr>
+								  </tbody>
+								  	<tbody>
+									  <tr>
+										<td>WHO</td>
+										<td>Outdoors Equivalent Continuous</td>
+										<td>55</td>
+									  </tr>
+								  </tbody>
+								  <tbody>
+									  <tr>
+										<td>WHO</td>
+										<td>Outdoor Nighttime</td>
+										<td>40</td>
+									  </tr>
+								  </tbody>
+								 <tbody>
+									  <tr>
+										<td>State of California</td>
+										<td>Indoors Day-Night</td>
+										<td>45</td>
+									  </tr>
+								  </tbody>
+								  </table>
+								</div>
+							</div>
+						</div>
+					</article>
 
 					</div>
 				</div>
@@ -86,7 +151,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div></li>
 						</ul>
 					</div>
 
