--- a/laws.html
+++ b/laws.html
@@ -1,12 +1,20 @@
 <!DOCTYPE HTML>
+
 <!--
+
 	Arcana by HTML5 UP
+
 	html5up.net | @n33co
+
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
+
 <html>
+
 	<head>
 		<title>San Francisco Noise Watch</title>
+
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -21,73 +29,308 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 		</noscript>
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+
 	</head>
+
 	<body>
 
+
+
 		<!-- Header -->
+
 			<div id="header">
 
+
+
 				<!-- Logo -->
+
 					<h1><a href="index.html" id="logo"><em>San Francisco</em> Noise Watch</a></h1>
 
+
+
 				<!-- Nav -->
+
+					<!-- Nav -->
+
 					<nav id="nav">
 						 <ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="impacts.html">Impacts</a></li>
 							<li class="current"><a href="laws.html">Laws</a></li>
-							<li><a href="noise.html">Noise in SF</a></li>
-							<li><a href="report.html">Report</a></li>
-							<li><a href="resources.html">Resources</a></li>
+							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="measurement.html">Measuring Noise</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
+							<li><a href="resources.html">Additional Resources</a></li>
 						</ul>
 					</nav>
-
 			</div>
 
+
+
 		<!-- Main -->
+
 			<section class="wrapper style1">
+
 				<div class="container">
+
 					<div id="content" class="noise-content">
+
+
 
 						<!-- Content -->
 
+
+
 							<article>
+
 								<header>
-									<h2>Noise Laws</h2>
-									<p>Noise noise noise...</p>
-								</header>
 
-								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+										<h2>Noise Laws</h2>
 
-								<h4>Federal Regulation</h4>
+											<!--<h2>Right Sidebar</h2>
 
-								<p>At the national level, regulations limit the allowable sound levels produces by aircraft, railway and roadway vehicles and certain heavy equipment. For example, almost all aircraft in current operation must meet standards for runway takeoffs, landings, and sidelines, which depend on the aircraft's weight and its number of engines. US Federal Highway Standards limit the maximzxuzxm allowable noise emission level for a new heavy-duty truck is 80 dbA at 50 feet from the centerline of traffic. </p>
+											<p>Sidebar on the right, content on the left.</p>-->
 
-								<p>Emissions standards have a number of shortcomings.   Emissions standards exit for only a minority of sources of noise; they may not apply to equipment already in use; and they do not address the problem of cumulative emissions. For example, emissions standards for new highway and railway construction and operation typically allow small incremental increases in noise levels.  Overtime, these permitted incremental increases become significant and health adverse.</p>
+										</header>
 
-								<h4>State and Local Regulation</h4>
 
-								<p>Thoughtful planning and building rules and their strict enforcement can mitigate many noise conflicts.  Zoning codes can limit the incompatible proximal location of residential and commercial uses.  Building code can require acoustical insulation to keep sound inside bars and clubs and to keep living and sleeping areas quite while adequately ventilated.</p>
 
-								<p>Enforcement of all noise laws is variable and often subjective. Even where laws exists, municipalities may not have sufficient or trained noise enforcement personnel, the ability to monitor noise compliance, or the willingness to pursue enforcement actions against noise transgressors. The table below details the current regulations on noise in San Francisco.</p>
+										<!--<span class="image featured"><img src="images/banner.jpg" alt="" /></span>-->
+
+
+
+										<p>This page provides a summary of the laws and standards that apply to common sources of urban noise in San Francisco. Article 29 of the San Francisco Police Code, also known as the San Francisco Noise Ordinance, is the source of most of these laws and standards.</p> 
+
+
+
+										<p>Important definitions:
+
+										<dl class="law-list">
+
+											<li>Sound Exposure Level is the logarithmic measure of the Sound Pressure Level squared and integrated over a stated period of time or event, relative to a reference sound pressure value. The SEL is reported using the unit of the Decibel, abbreviate dB.</li>
+
+											<li> The A-weighted Sound Level (dB A) is a measure of sound pressure level designed to reflect the acuity of the human ear, which does not respond equally to all frequencies.</li>
+
+											<li>The ambient noise level is the lowest measured sound level at a given location and time without the noise source of interest operating.</li>
+
+											<li>dBC is shorthand for C-weighted decibles, which does not prioritize higher over lower frequency sounds. Government uses dBC as a possible measure for entertainment and restaurant related noise.</li>
+
+										</dl></p>
+
+										<table align="center" id ="law">
+
+											<caption><h3>What is creating noise?</h3></caption>
+
+											<tr>
+
+												<td><a href="#animals"><img src="images/dog.jpg">
+
+													<h1 align = "center">Animals</h1></a></td>
+
+												<td><a href="#motor"><img src="images/traffic.jpg">
+
+													<h1 align = "center">Motor Vehicles</h1></a></td>
+
+												<td><a href="#entertain"><img src="images/entertain.jpg">
+
+													<h1 align = "center">Entertainment</h1></a></td>
+
+											</tr>
+
+											<tr>
+
+												<td><a href="#construct"><img src="images/construct.jpg">
+
+													<h1 align = "center">Construction</h1></a></td>
+
+												<td><a href="#mech"><img src="images/mech.jpg">
+
+													<h1 align = "center">Mechanical Equipment</h1></a></td>
+
+												<td><a href="#public"><img src="images/publicworks.jpg">
+
+													<h1 align = "center">Sanitation and Public Works</h1></a></td>
+
+											</tr>
+
+										</table>
+
+										
+
+										<h3 align="center"><a name="animals">Animals</a></h3>
+
+												<p><b>Animal noises</b> are not specifically regulated under city law. However, under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=5">Section 2916</a>, the Chief of Police can regulate and enforce against any source of noise not regulated under specific provisions of the San Francisco Noise Ordinance.</p>
+
+											
+
+										<h3 align="center"><a name="motor">Motor Vehicles</a></h3>
+
+												<p><b>Street Cleaning Equipment</b> is not specifically regulated under the San Francisco Noise Ordinance.  However, the Department of Public Works is responsible for the maintainance and operation of street cleaning vehicles and equipment.</p>
+
+												<p><b>Automobile Alarms</b> are not regulated under the San Francisco Noise Ordinance.  However, under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=5">Section 2916</a>, the Chief of Police can regulate and enforce against any source of noise not regulated under specifc provisions of the San Francisco Noise Ordinance.</p>
+
+												<p><b>Automobile Music</b> is regulated under <a href="http://www.leginfo.ca.gov/cgi-bin/displaycode?section=veh&group=26001-27000&file=27000-27007">Section 27000-27007</a> of the Vehicle Code by the San Francisco Police Department. Sound amplification systems in vehicles should not be heard from 50 feet away. This applies at all hours.</p>
+
+												<p><b>Automobile Exhaust</b> is regulated under the California Motor Vehicle Code by the San Francisco Police Department. All modern vehicles have been standardized to an allowable limit of 80 dBA (measured from 50 feet away), but full regulations can be found below.</p>
+
+													<table id ="cars" cellpadding="4" cellspacing="1" width="280">
+														<tr>
+															<th valign="top">Gross Vehicle Weight Rating (Pounds)</td>
+															<th valign="top" colspan="6">Date of Manufacture</td>
+														</tr>
+														<tr>
+															<td></td>
+															<td>1968 to 1972</td>
+															<td>1973 to 1974</td>
+															<td>1975 to 1977</td>
+															<td>1978 to 1981</td>
+															<td>1982 to 1987</td>
+															<td>After 1987</td>
+														</tr>
+														<tr>
+															<td>Under 6,000 (except motorcycles and other specified vehicles)</td>
+															<td align="center" valign="bottom">86 dBA</td>
+															<td align="center" valign="bottom">84 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+														</tr>
+														<tr>
+															<td>Between 6,000 and 8,500</td>
+															<td align="center" valign="bottom">88 dBA</td>
+															<td align="center" valign="bottom">86 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>	
+														</tr>
+														<tr>
+															<td>Between 8,500 and 10,000</td>
+															<td align="center" valign="bottom">88 dBA</td>
+															<td align="center" valign="bottom">86 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+														</tr>
+														<tr>
+															<td>Over 10,000</td>
+															<td align="center" valign="bottom">88 dBA</td>
+															<td align="center" valign="bottom">86 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">83 dBA</td>
+															<td align="center" valign="bottom">80 dBA</td>
+														</tr>
+													</table>
+
+												<p align="right">Information taken from Sections <a href="https://www.dmv.ca.gov/portal/dmv/detail/pubs/vctop/vc/d12/c5/a2.5/27204">27204</a> and <a href="https://www.dmv.ca.gov/portal/dmv/detail/pubs/vctop/vc/d12/c5/a2.5/27206">27206</a> of the California Motor Vehicle Code.</p>
+
+												<p>Most cars fall under 6,000 pounds. Vehicles which are above are trucks and some SUVs.</p>
+
+												<p>Noise is meant to be measured from 50 feet away.</p>
+
+												<p><b>Motorcycle Exhaust</b> is regulated under the California Motor Vehicle Code by the San Francisco Police Department. No motorcycle may have exhaust systems modified to exceed allowed noise limits. 
+
+												<table id ="cars" cellpadding="4" cellspacing="1" width="280">
+													<tr>
+														<th colspan="5">Motorcycle Date of Manufacture</td>
+													</tr>
+													<tr>
+														<td>Before 1970</td>
+														<td>1970 to 1972</td>
+														<td>1973 to 1974</td>
+														<td>1975 to 1985</td>
+														<td>After 1985</td>
+													</tr>
+													<tr>
+														<td align="center" valign="bottom">92 dBA</td>
+														<td align="center" valign="bottom">88 dBA</td>
+														<td align="center" valign="bottom">86 dBA</td>
+														<td align="center" valign="bottom">83 dBA</td>
+														<td align="center" valign="bottom">80 dBA</td>
+													</tr>
+												</table>
+
+												<p align="right">Information taken from Sections <a href="https://www.dmv.ca.gov/portal/dmv/?1dmy&urile=wcm:path:/dmv_content_en/dmv/pubs/vctop/vc/d12/c5/a2.5/27201">27201</a> and <a href="https://www.dmv.ca.gov/portal/dmv/?1dmy&urile=wcm:path:/dmv_content_en/dmv/pubs/vctop/vc/d12/c5/a2.5/27202">27202</a> of the California Motor Vehicle Code.</p>
+
+												<p>Noise is meant to be measured from 50 feet away.</p>
+
+												<p>Noise from <b>Municipal Railways Vehicles</b> are not regulated under local law. City agencies do purchase railway vehicles, maintain the rail track, and control the location, timing, and operation of vehicles.</p>
+
+												<p><b>Tour Buses</b> are regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=4">Section 2913</a> San Francisco Noise Ordinance by the San Francisco Police Department. At maximum level noise should not be audible 50 feet away from the vehicle.</p>
+
+											<h3 align="center"><a name ="entertain">Entertainment</a></h3>
+
+												<p>Noise from <b>Bars</b> is regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health and San Francisco Entertainment Commission. Allowable levels are no more than 8 dBA or 8 dBC above the ambient noise levels.</p>
+
+												<p>Noise from <b>Nightclubs</b> is regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health and San Francisco Entertainment Commission. Allowable levels are no more than 8 dBA or 8 dBC above the  ambient noise levels.</p>
+
+												<p><b>Amplified Sound Equipment</b> is regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health. Allowable levels are no more than 8 dBA or 8 dBC above the ambient noise levels. </p>
+
+											<h3 align="center"><a name="construct">Construction</a></h3>
+
+												<p><b>Construction Activities</b> is regulated under <a href = "https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2908</a> of the San Francisco Noise Ordinance by the Department of Building Inspection. Construction of public spaces is handled by the Department of Public Works. At night from 8:00 PM to 7:00 AM, noise levels cannot be over 5dBA over the ambient noise level when measured from any point on the property line.  </p>
+
+												<p><b>Construction Equipment</b> is regulated under <a href = "https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2907</a> of the San Francisco Noise Ordinance by the Department of Building Inspection. Equipment cannont produce sound levels greater than 80dBA at a distance of 100 feet from the equipment. Construction equipment can only be used after 8 PM or before 7AM if it also meets the more stringent evening and nighttime requirements under Construction Activities above.</p>
+
+											<h3 align="center"><a name="mech">Mechanical Equipment</a></h3>
+
+												<p><b>Generators</b> are regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health. They cannot operate in a commerical use if they produce sound levels of 8dBA over the ambient level when measured at the property line of the commerical use.  They cannot operate in a residential use if they produce sound levels 5 dBA over the ambient level when measured at the property line of the residential use.</p>
+
+												<p><b>Heating Ventilation and Air Conditioning (HVAC) Systems</b> are regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health. They cannot operate in a commerical use if they produce sound levels of 8dBA over the ambient level when measured at the property line of the commerical use. They cannot operate in a residential use if they produce sound levels 5 dBA over the ambient level when measured at the property line of the residential use.</p>
+
+												<p><b>Refrigeration Systems</b> are regulated under <a href ="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health. They cannot operate in a commerical use if they produce sound levels of 8dBA over the ambient level when measured at the property line of the commerical use. They cannot operate in a residential use if they produce sound levels 5 dBA over the ambient level when measured at the property line of the residential use.</p>
+
+												<p><b>Garbage Compactors</b> are regulated under <a href="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2909</a> of the San Francisco Noise Ordinance by the Department of Public Health. They cannot operate in a commerical use if they produce sound levels of 8dBA over the ambient level when measured at the property line of the commerical use. They cannot operate in a residential use if they produce sound levels 5 dBA over the ambient level when measured at the property line of the residential use.</p>
+
+											<h3 align="center"><a name="public">Sanitation and Public Works</a></h3>
+
+												<p><b>Garbage Collection</b> is regulated under <a href ="https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=2">Section 2904</a> of the San Francisco Noise Ordinance by the Department of Public Health. The mechanical processing system of garbage trucks (not the actual noise of moving garbage) cannot exceed 75 dBA from 50 feet away.</p>
+
+												<p>Noise from <b>Sewer Covers</b> is not regulated.  The San Francisco Public Utilities Commission maintains the sewer system including covers.</p>
+
+												<p><b>Construction</b> on behalf of the government follows the same rules as general construction. It is regulated under <a href = "https://law.resource.org/pub/us/code/city/ca/SanFrancisco/Police%20Code/article29.pdf#page=3">Section 2908</a> of the San Francisco Noise Ordinance by the Department of Public Works. Between 8:00PM and 7:00AM allowable levels are under 5dBA over the ambient noise level when measured from the property line. </p>
 
 							</article>
 
+
+
 					</div>
+
 				</div>
+
 			</section>
 
+
+
+
+
 		<!-- Footer -->
+
 			<div id="footer">
+
 				<!-- Copyright -->
+
 					<div class="copyright">
+
 						<ul class="menu">
+
 							<li>&copy; The Civic Engine. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+
 						</ul>
+
 					</div>
 
 			</div>
 
+
+
+
+
 	</body>
+
 </html>
