--- a/resources.html
+++ b/resources.html
@@ -38,9 +38,10 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
-							<li><a href="noise.html">Noise in SF</a></li>
-							<li><a href="report.html">Report</a></li>
-							<li class="current"><a href="resources.html">Resources</a></li>
+							<li><a href="noise.html">Solutions</a></li>
+							<li><a href="measurement.html">Measuring Noise</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
+							<li class="current"><a href="resources.html">Additional Resources</a></li>
 						</ul>
 					</nav>
 
@@ -53,33 +54,39 @@
 
 						<!-- Content -->
 
-							<article>
-								<header>
-									<h2>Additional Resources</h2>
-								</header>
+						<article>
+							<header>
+								<h2>Additional Resources</h2>
+							</header>
 
-								<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
-
+							<div class="noise-resource">
 								<p> <a href="http://www.acoustic-glossary.co.uk/">Glossary of Terms Used in Noise Measurement and Control</a></p>
 								<p>This online resource explains the technical terms used in noise science.</p>
-
-								<h3>And Yet Another Subheading</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-								justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-								ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-								vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-								Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-								rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-								Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-								Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-								<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-								quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-								Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-								fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-								Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-								Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-							</article>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://www.acoustic-glossary.co.uk/">Glossary of Terms Used in Noise Measurement and Control</a></p>
+								<p>This online resource explains the technical terms used in noise science.</p>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://www.noisequest.psu.edu/noisebasics-metricsexistingprograms.html">Basics of Noise Metrics</a></p>
+								<p>This site provides an introduction to common noise pollution metrics.</p>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://www.who.int/docstore/peh/noise/guidelines2.html">WHO Community Noise Standards</a></p>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://www.euro.who.int/en/health-topics/environment-and-health/noise/publications/2009/night-noise-guidelines-for-europe">WHO Night Noise Guidelines</a></p>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://www2.epa.gov/laws-regulations/summary-noise-control-act">U.S Noise Control Act</a></p>
+								<p>The U.S. Noise Control Act gave Federal agencies the authority to set standards on products that produce noise.  Since 1982, the EPA has not had funding to implement the Act.</p>
+							</div>
+							<div class="noise-resource">
+								<p> <a href="http://scitation.aip.org/content/asa/journal/jasa/135/4/10.1121/1.4865269">Evaluation of Mobile Phone Sound Measurement Apps</a></p>
+								<p>This paper from the Acoustical Society of America evaluated several iOS sound meter and found several to perform at a level adequate for noise monitoring and regulation.</p>
+							</div>
+							
+						</article>
 
 					</div>
 				</div>
