--- a/noise.html
+++ b/noise.html
@@ -38,9 +38,10 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="impacts.html">Impacts</a></li>
 							<li><a href="laws.html">Laws</a></li>
-							<li class="current"><a href="noise.html">Noise in SF</a></li>
-							<li><a href="report.html">Report</a></li>
-							<li><a href="resources.html">Resources</a></li>
+							<li class="current"><a href="noise.html">Solutions</a></li>
+							<li><a href="measurement.html">Measuring Noise</a></li>
+							<li><a href="https://docs.google.com/a/berkeley.edu/forms/d/15XlNgLYGjaAz0OY-iixCj2Q2khDE7lZDwt7VWUv1hVs/viewform">Report Noise Pollution</a></li>
+							<li><a href="resources.html">Additional Resources</a></li>
 						</ul>
 					</nav>
 
@@ -55,18 +56,17 @@
 
 					<article>
 						<header>
-							<h2>Noise in San Francisco</h2>
-							<p>There are tons of noise sources in a city like San Francisco, and different ways to limit their negative impact on people. The table below gives some examples of common noise sources and solutions. </p>
+							<p>There are many noise sources in a city like San Francisco, and different ways to limit their negative impact on people. The table below gives some examples of common noise sources and solutions. </p>
 						</header>
 						<section class="wrapper style1">
 						<table class="noise-table">
 							  <thead>
 							    <td><h3>COMMON NOISE SOURCES</h3></td>
-							    <td><h3>SOLUTIONS FOR CITIES</h3></td>
+							    <td><h3>WHAT CITIES CAN DO</h3></td>
 							  </thead>
 							  <tbody>
 								  <tr class="table-subtitle">
-								    <td colspan="2">BUSINESS NOISE</td>
+								    <td colspan="2"><h3>BUSINESS NOISE</h3></td>
 								  </tr>
 								  <tr>
 									<td>Early or late hours of operation; delivery vehicles; operation of machinery and tools.
@@ -84,7 +84,7 @@
 							  </tbody>
 							 <tbody>
 							  <tr class="table-subtitle">
-							    <td colspan="2">ENTERTAINMENT NOISE</td>
+							    <td colspan="2"><h3>ENTERTAINMENT NOISE</h3></td>
 							  </tr>
 							  <tr>
 								<td>Bars, restaurants, and clubs
@@ -104,7 +104,7 @@
 							  </tbody>
 							  <tbody>
 								  <tr class="table-subtitle">
-								    <td colspan="2">CONSTRUCTION NOISE</td>
+								    <td colspan="2"><h3>CONSTRUCTION NOISE</h3></td>
 								  </tr>
 								  <tr>
 									<td>Heavy construction equipment such as pile drivers bulldozers,  and trucks; powered equipment such as saws and jackhammers
@@ -118,7 +118,7 @@
 							  </tbody>
 							  <tbody>
 								  <tr class="table-subtitle">
-								    <td colspan="2">ROAD TRAFFIC NOISE</td>
+								    <td colspan="2"><h3>ROAD TRAFFIC NOISE</h3></td>
 								  </tr>
 								  <tr>
 									<td>Freeways, bus and truck routes, delivery vehicles
@@ -157,7 +157,7 @@
 							  </tbody>
 							  <tbody>
 							  	<tr class="table-subtitle">
-								    <td colspan="2">TRAINS</td>
+								    <td colspan="2"><h3>TRAINS</h3></td>
 								</tr>
 								<tr>
 									<td>Passenger and Freight Trains
@@ -177,23 +177,24 @@
 							  </tbody>
 							  <tbody>
 							  	<tr class="table-subtitle">
-								    <td colspan="2">PUBLIC SANITATION</td>
+								    <td colspan="2"><h3>SANITATION AND PUBLIC WORKS</h3></td>
 								</tr>
 								<tr>
 									<td>Refuse collection and street maintenance vehicles
 									</td>
 									<td>
-										<p>Maintain rail tracks</p>
-										<p>Limit train speed in residential areas
-										</p>
-										<p>Eliminate at grade crossing
-										</p>
-										<p>Require acoustics insulation in residential buildings near freeways and busy streets
-										</p>
-										<p>Build and operate new train lines below grade
+										<p>Purchase quieter refuse collection and street maintenance vehicles</p>
+										<p>Limit the hours of operation for refuse collection and street maintenance vehicles
 										</p>
 									</td>
-								  </tr>
+								</tr>
+								<tr>
+									<td>Power washers, leaf blowers and other property cleaning and maintenance equipment
+									</td>
+									<td>
+										Limit the use, location, or timing of specific  property maintenance equipment.
+									</td>
+								</tr>
 							  </tbody>
 
 						</table>
